--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.2"
-    }
+  "private": true,
+  "name": "instabook",
+  "version": "0.1.0",
+  "description": "Instagram PDF book generator",
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/alexanderevgrafov/instabook"
+  },
+  "author": "Alexander Evgrafov",
+  "license": "UNLICENSED",
+  "homepage": "",
+  "scripts": {
+    "watch": "webpack  --progress --colors --watch --env.develop",
+    "build": "webpack  --progress --colors --env.develop",
+    "prod": "webpack"
+  },
+  "devDependencies": {
+    "axios": "^0.18",
+    "bootstrap": "^4.0.0",
+    "classnames": "^2.2.6",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.5",
+    "popper.js": "^1.12",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-mvx": "^2.0.4",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "type-r": "^2.1.7",
+    "underscore": "^1.9.1",
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.6.2"
+  },
+  "dependencies": {
+    "clean-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^4.6.0",
+    "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.1",
+    "uglifyjs-webpack-plugin": "^2.1.1"
+  }
 }
