--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   "dependencies": {
     "@types/node": "^11.12.2",
     "fastify": "^2.1.0",
+    "fastify-caching": "^5.0.0",
+    "fastify-cookie": "^3.0.2",
+    "fastify-server-session": "^3.0.1",
     "fastify-static": "^2.4.0",
     "serve-static": "^1.13.2",
     "socket.io": "^2.2.0",
