--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch": "webpack  --progress --colors --watch --env.develop",
     "build": "webpack  --progress --colors --env.develop",
     "prod": "webpack",
-    "server": "tsc-watch --onSuccess \"node ./server/central.js\""
+    "server": "tsc-watch --onSuccess \"node ./server/server/central.js\""
   },
   "devDependencies": {
     "bootstrap": "^4.0.0",
@@ -49,6 +49,7 @@
     "fastify-cookie": "^3.0.2",
     "fastify-server-session": "^3.0.1",
     "fastify-static": "^2.4.0",
+    "html-pdf": "^2.2.0",
     "serve-static": "^1.13.2",
     "socket.io": "^2.2.0",
     "tsc-watch": "^2.1.2"
