--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "fastify-server-session": "^3.0.1",
     "fastify-static": "^2.4.0",
     "handlebars": "^4.1.2",
+    "handlebars-loader": "^1.7.1",
     "html-pdf": "^2.2.0",
     "reflect-metadata": "^0.1.13",
     "serve-static": "^1.13.2",
