--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "handlebars": "^4.1.2",
     "handlebars-loader": "^1.7.1",
     "html-pdf": "^2.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "react-motion": "^0.5.2",
     "reflect-metadata": "^0.1.13",
     "serve-static": "^1.13.2",
     "socket.io": "^2.2.0",
