--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "html-pdf": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "rc-slider": "^8.6.9",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-motion": "^0.5.2",
     "reflect-metadata": "^0.1.13",
