Templates are TSX modules, separate templates for  media and text

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,13 @@
         "sourceMap": true,
         "outDir": "./server",
         "alwaysStrict": true,
-        "allowJs": true
+        "allowJs": true,
+
+//    "noEmit": true,
+//    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
+//    "isolatedModules": true
+
     },
 
     "files": [
