--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "html-pdf": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "platform": "^1.3.5",
     "rc-slider": "^8.6.9",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom-server": "^0.0.5",
