--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "fastify-static": "^2.4.0",
     "handlebars": "^4.1.2",
     "handlebars-loader": "^1.7.1",
+    "history": "^4.9.0",
     "html-pdf": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "node-sass": "^4.12.0",
     "platform": "^1.3.5",
     "rc-slider": "^8.6.9",
     "react-bootstrap": "^1.0.0-beta.8",
@@ -62,6 +64,7 @@
     "reflect-metadata": "^0.1.13",
     "serve-static": "^1.13.2",
     "socket.io": "^2.2.0",
-    "tsc-watch": "^2.1.2"
+    "tsc-watch": "^2.1.2",
+    "valuelink": "^2.0.5"
   }
 }
