reintroduce react-mvx

--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-type-r": "3.0.0-a001",
+    "react-mvx": "^3.0.0",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
-    "type-r": "^3.0.0",
+    "type-r": "^3.0.8",
     "typescript": "^3.3.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "underscore": "^1.9.1",
